# swiperboxd

./: .env.template  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  ENV_SECRETS.md  EXECUTION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  SPEC_IMPLEMENTATION_CHECKLIST.md  SPEC_METADATA_SYNC_FIX.md  bugfix.md  design.md  package.json  patch_webhook.py  pyproject.toml  requirements.txt  tasks.md  temp_fetch_and_seed_lists.py  temp_lists_routes.py  temp_migration_sql.txt  temp_run_migration.py  temp_seed_lists.sql  temp_setup_exec_sql.py  temp_verify_keep_alive.py  test_auth_debug.py  vercel.json
.github/workflows/: ci.yml  codeql.yml  keep-alive.yml
api/: index.py
db/migrations/: 001_movies.sql  002_users.sql  003_watchlist.sql  004_diary.sql  004_user_diary.sql  005_exclusions.sql  006_genre_preferences.sql  007_lists.sql  007_rate_limit_state.sql  008_list_scrape_tracking.sql  008_rls_user_based.sql  009_lb_film_id.sql  LEGACY_001_initial_schema.sql  LEGACY_002_rls_policies.sql  LEGACY_003_user_watchlist.sql  LEGACY_005_genre_preferences.sql  LEGACY_006_ingest_state.sql  README.md
db/sql/: keep_alive_ping.sql
extension/: README.md  background.js  content.js  letterboxd-content.js  manifest.json  popup.html  popup.js
scripts/: README.md  periodic_sync.py  print_migrations.py  run_migrations.py  seed_supabase.py  setup_database.py  smoke_test_app.py  test_auth.py  test_auth_debug.py
src/api/: README.md  app.py  app_patch.py  auth.py  auth_deps.py  cron.py  database.py  (+7 more)
tests/: README.md  test_api.py  test_letterboxd_provider.py  test_qstash_queue.py  test_rate_limiter.py  test_store.py  web_state.test.js
(+13 files in other folders)
