[project]
name = "codebase_api"
version = "0.3.0"
description = "Runnable discovery app baseline"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.3",
  "cryptography>=45.0.0",
  "uvicorn>=0.44.0",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.14.3",
  "supabase>=2.0.0",
  "redis>=5.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
